# orc-ray-agent

./: .env.docker-compose  .env.docker-compose.template  .env.example  .gitignore  AGENT.md  LICENSE  Makefile  README.md  docker-compose.yml
api-agent/: Dockerfile  alembic.ini  pyproject.toml
api-agent/alembic/: env.py
api-agent/app/: main.py
api-agent/app/api/v1/: auth.py  jobs.py  users.py
api-agent/app/core/: config.py  db.py  dependencies.py  security.py
api-agent/app/dashboard/: routes.py
api-agent/app/dashboard/templates/: base.html  jobs.html  login.html  overview.html  plugins.html  users.html
api-agent/app/models/: job.py  plugin.py  user.py
api-agent/app/schemas/: job.py  plugin.py  user.py
api-agent/app/services/: mq_service.py
api-agent/app/tests/: conftest.py  test_api_auth.py  test_api_jobs.py  test_api_users.py  test_core_security.py  test_integration.py  test_models_job.py  test_models_plugin.py  test_models_user.py
docs/: agent.doc.md  claude.doc.md  deployment.doc.md  implementation-status.doc.md  makefile-guide.doc.md  makefile-quickref.doc.md
plugin-registry/: Dockerfile  pyproject.toml
plugin-registry/app/: main.py
plugin-registry/app/api/v1/: plugins.py
plugin-registry/app/core/: config.py
plugin-registry/app/models/: plugin.py
plugins/example-classifier/: Dockerfile  main.py  plugin.json  pyproject.toml
plugins/example-processor/: main.py  plugin.json  pyproject.toml
ray-head/: Dockerfile
ray-worker/: Dockerfile  actors.py  config.py  main.py  mq_consumer.py  pyproject.toml
specs/: blueprint.specs.md  structure.specs.md
